# decorurs-visual-search

./: .env.example  .gitignore  README.md  confidence-threshold-fix.patch  decorurs-visual-search-chat-widget.bundle  decorurs-visual-search-fix.patch  docker-compose.yml  patch_ensembling.py  requirements.txt  start.sh
api/: Dockerfile  clip_service.py  main.py  pyproject.toml
api/static/: README.md  decorurs-widget.js  demo.html
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
indexer/: .dockerignore  Dockerfile  ablation.py  clip_service.py  clip_service.py.bak  fetch_catalog.py  index_products.py  index_products.py.bak  pyproject.toml  warm_models.py
