[project]
name = "decorurs-indexer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "open-clip-torch==2.24.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "qdrant-client==1.18.0",
    "requests>=2.32",
    "pillow>=11.0",
    "tqdm>=4.67",
    "httpx>=0.27",
    "rembg>=2.0.59",
    "onnxruntime>=1.18",
    "numpy>=1.26",
    "numba>=0.60.0",
    "scipy>=1.11",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
